syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.dock.access";
option java_outer_classname = "AccessProto";

package access;

service AccessService {
    rpc AddAccess (AddAccessRequest) returns (AddAccessResponse) {}
}

message AddAccessRequest {
    string requestId = 1;
    int32 clientId = 2;
    string clientName = 3;
    int64 timestamp = 4;

    Geolocation geolocation = 5;
    Device device = 6;
}

message Geolocation {
    double latitude = 1;
    double longitude = 2;
}

message Device {
    string type = 1;
    string os = 2;
    string version = 3;
    string ipAddress = 4;
}

message AddAccessResponse {
    bool success = 1;
}
